--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body class="font-mulish">
     <!-- Header Area Start -->
-    <header class="w-[95%] md:w-[80%] mx-auto">
+    <header class="max-w-[1270px] px-2 lg:px-0 mx-auto">
       <!-- Navbar Area -->
       <nav class="py-4 lg:py-12">
         <div class="navbar">
@@ -134,28 +134,28 @@
             <p
               class="text-[18px] lg:text-[20px] font-medium leading-[28px] lg:leading-[36px] py-6 max-w-[400px]"
             >
-              Share your favorite opinion and win and Vintage Forum coffee mug!
+              Share your favorite opinion and win and Vintage Forum services!
             </p>
             <!-- Input / Button -->
             <div class="relative">
-              <input
+              <input id="search-field"
                 type="text"
                 placeholder="Search here..."
                 class="input w-full text-black text-lg lg:text-xl"
               />
-              <button
-                class="btn md:btn-md text-base md:text-xl bg-[#797dfc] text-white rounded-lg absolute right-0"
+              <button onclick="handleSearch()"
+                class="btn btn-primary md:btn-md text-base md:text-xl bg-[#797dfc] text-white rounded-lg absolute right-0"
               >
                 Search
               </button>
             </div>
           </div>
           <div
-            class="banner-area w-full lg:w-1/3 p-6 lg:p-12 mt-4 lg:mt-0 rounded-3xl bg-white flex flex-col justify-around"
+            class="banner-area text-lg lg:text-2xl font-bold w-full lg:w-1/3 p-6 lg:p-12 mt-4 lg:mt-0 rounded-3xl bg-white flex flex-col justify-around"
           >
             <div class="flex items-center justify-between">
               <p>Registered Users</p>
-              <p>05</p>
+              <p>15</p>
             </div>
             <div class="flex items-center justify-between">
               <p>Forum</p>
@@ -163,11 +163,11 @@
             </div>
             <div class="flex items-center justify-between">
               <p>Topics</p>
-              <p>05</p>
+              <p>10</p>
             </div>
             <div class="flex items-center justify-between">
               <p>Replies</p>
-              <p>05</p>
+              <p>20</p>
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
     <!-- Header Area End -->
 
     <!-- Main Area Start -->
-    <main class="w-[95%] md:w-[80%] mx-auto">
+    <main class="max-w-[1270px] px-2 lg:px-0 mx-auto">
       <!-- Discuss Section -->
       <section class="my-16 lg:my-24">
         <div class="text-center">
@@ -186,17 +186,20 @@
             app. The integrated <br />testing features allow for a streamlined.
           </p>
         </div>
+        <div id="loader-icon" class="text-center hidden">
+          <span class="loading loading-spinner text-primary"></span>
+        </div>
         <div class="mt-10 md:flex md:space-x-6">
           <!-- Discus-left -->
           <div id="card-container"></div>
           
           <!-- Discus-right -->
-          <div class="my-10 md:mt-0 bg-[#12132D0D] rounded-3xl p-6 md:p-8 max-w-full flex-1">
-            <div class="flex justify-between pb-4 ">
-              <h2 class="text-xl font-bold">Title</h2>
+          <div class="mt-10 mb-5 md:mt-0 bg-[#12132D0D] rounded-3xl p-6 md:p-8 flex-1">
+            <div class="flex justify-between pb-5 border-b-2 border-dashed border-black">
+              <h2 class="text-2xl font-bold">Title</h2>
               <div class="flex items-center space-x-3 text-2xl">
                 <i class="fa-solid fa-check-double text-green-500"></i>
-                <h3 class="text-[#12132D99]">Mark as read (<span id="read-counts">0</span>)</h3>
+                <h3 class="text-[#12132D99] text-2xl font-bold">Mark as read (<span id="read-counts">0</span>)</h3>
               </div>
             </div>
             <div  id="show-read-container">
@@ -251,7 +254,7 @@
     <!-- Footer Area Start -->
     <footer class="bg-[#12132D] text-white py-16">
       <section
-        class="footer footer-center px-2 lg:px-10 rounded w-[95%] md:w-[80%] mx-auto"
+        class="footer footer-center px-2 lg:px-10 rounded max-w-[1270px] mx-auto "
       >
         <div>
           <h2 class="text-2xl lg:text-4xl font-black text-[#8b90e8]">
@@ -265,10 +268,10 @@
         </div>
         <div>
           <div class="grid grid-flow-col gap-5 lg:gap-10">
-            <a><i class="fa-brands fa-facebook text-xl lg:text-3xl"></i></a>
-            <a><i class="fa-brands fa-twitter text-xl lg:text-3xl"></i></a>
-            <a><i class="fa-brands fa-instagram text-xl lg:text-3xl"></i></a>
-            <a><i class="fa-brands fa-github text-xl lg:text-3xl"></i></a>
+            <a><i class="fa-brands fa-facebook text-xl lg:text-3xl cursor-pointer"></i></a>
+            <a><i class="fa-brands fa-twitter text-xl lg:text-3xl cursor-pointer"></i></a>
+            <a><i class="fa-brands fa-instagram text-xl lg:text-3xl cursor-pointer"></i></a>
+            <a><i class="fa-brands fa-github text-xl lg:text-3xl cursor-pointer"></i></a>
           </div>
         </div>
         <aside class="border-t-2 w-full pt-10">
